--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "uuidv4": "^6.2.10"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
