--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "mongoose": "^5.13.1",
+    "mongoose-unique-validator": "^2.0.3",
     "uuidv4": "^6.2.10"
   },
   "devDependencies": {
