--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "mapbox-gl": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.4.2"
